--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -198,14 +198,14 @@ h1 {
 }
 
 .icon-text1 {
-  padding-top: 20px;
-  margin-top: 30px;
+  padding-top: 10px;
+  margin-top: 20px;
   color: white;
   font-family: "Quicksand", sans-serif;
 }
 
 .icon-text2 {
-  margin-top: 50px;
+  margin-top: 40px;
   color: white;
   font-family: "Quicksand", sans-serif;
 }
@@ -522,6 +522,7 @@ h5::before {
 
 .cls-main {
   margin-top: 10%;
+  margin-bottom: -10%
 }
 
 .icon-cls {
