--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -568,85 +568,6 @@ h5::before {
   margin-left: 5%;
 }
 
-@media only screen and (min-width:301px) and (max-width:1100px) {
-  .mean-sub {
-    margin-top: 5%;
-    margin-bottom: 20%;
-    width: 90%;
-    margin-left: 6%;
-    color: white;
-  }
-
-  .collage {
-    width: 90%;
-    margin-left: 3%;
-  }
-
-  .next-prev {
-    margin-top: 10%;
-    border: solid 2px;
-    border-color: #364547;
-    border-radius: 22px;
-    margin-left:;
-  }
-
-  .prev, .next {
-    margin-top: 10%;
-    margin-bottom: 5%;
-  }
-
-  .prev-text, .next-text {
-    color: #364547;
-    font-size: 13px;
-    font-family: "Quicksand", sans-serif;
-    font-weight: bolder;
-  }
-
-  .u_none:hover {
-    color: white;
-    text-decoration: underline;
-    text-decoration-thickness: 6px;
-    text-decoration-color: #c0e218;
-    font-size: 40px;
-    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
-  }
-
-  .u_none {
-    color: white;
-    margin-top: 20px;
-    text-decoration: underline;
-    text-decoration-thickness: 6px;
-    text-decoration-color: #f21170;
-    font-size: 30px;
-    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
-  }
-
-  .ftext {
-    color: #232320;
-    background: linear-gradient(90deg, rgba(72, 180, 58, 1) 0%, rgba(29, 231, 253, 1) 17%, rgba(252, 69, 240, 1) 51%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 2.5em;
-    letter-spacing: -1.5px;
-    line-height: 110%;
-    margin-left: 15%;
-    margin-top: 20%;
-    transition: all .2s ease-in-out;
-    width: 100%;
-  }
-
-  .ltext {
-    margin-top: 10%;
-    margin-bottom: 25%;
-    margin-left: 10%;
-    width: 90%;
-    color: white;
-    font-size: 15px;
-    font-family: 'Ubuntu', sans-serif;
-  }
-}
-
 .icon-cls {
   width: 50px;
   height: 50%;
@@ -775,4 +696,84 @@ audio {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+@media only screen and (min-width:301px) and (max-width:1100px) {
+  .mean-sub {
+    margin-top: 5%;
+    margin-bottom: 20%;
+    width: 90%;
+    margin-left: 6%;
+    color: white;
+  }
+
+  .collage {
+    width: 90%;
+    margin-left: 3%;
+    height: 100%
+  }
+
+  .next-prev {
+    margin-top: 10%;
+    border: solid 2px;
+    border-color: #364547;
+    border-radius: 22px;
+    margin-left:;
+  }
+
+  .prev, .next {
+    margin-top: 10%;
+    margin-bottom: 5%;
+  }
+
+  .prev-text, .next-text {
+    color: #364547;
+    font-size: 13px;
+    font-family: "Quicksand", sans-serif;
+    font-weight: bolder;
+  }
+
+  .u_none:hover {
+    color: white;
+    text-decoration: underline;
+    text-decoration-thickness: 6px;
+    text-decoration-color: #c0e218;
+    font-size: 40px;
+    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
+  }
+
+  .u_none {
+    color: white;
+    margin-top: 20px;
+    text-decoration: underline;
+    text-decoration-thickness: 6px;
+    text-decoration-color: #f21170;
+    font-size: 30px;
+    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
+  }
+
+  .ftext {
+    color: #232320;
+    background: linear-gradient(90deg, rgba(72, 180, 58, 1) 0%, rgba(29, 231, 253, 1) 17%, rgba(252, 69, 240, 1) 51%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 2.5em;
+    letter-spacing: -1.5px;
+    line-height: 110%;
+    margin-left: 15%;
+    margin-top: 20%;
+    transition: all .2s ease-in-out;
+    width: 100%;
+  }
+
+  .ltext {
+    margin-top: 10%;
+    margin-bottom: 25%;
+    margin-left: 10%;
+    width: 90%;
+    color: white;
+    font-size: 15px;
+    font-family: 'Ubuntu', sans-serif;
+  }
 }
