--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,7 +182,7 @@ h1 {
   font-family: "Quicksand", sans-serif;
   font-size: 35px;
   margin-bottom: 30px;
-  margin-top: 160px;
+  margin-top: 10%;
   text-decoration: underline;
   text-decoration-thickness: 5px;
   text-decoration-color: #f21170;
@@ -262,6 +262,8 @@ h5::before {
   margin-top: 200px;
   transition: all .2s ease-in-out;
   width: 700px;
+  text-align: center;
+  margin-left: 20%;
 }
 
 .ltext {
@@ -330,10 +332,18 @@ h5::before {
     line-height: 110%;
     margin-left: 4.5%;
     transition: all .2s ease-in-out;
+    text-align: center;
   }
+
   .hero-title, .c-hero {
     margin-top: 10%;
     width: 100%;
+  }
+
+  .c-hero-sub {
+    width: 98%;
+    text-align: center;
+    margin-bottom: 15%;
   }
 }
 
@@ -463,12 +473,14 @@ h5::before {
     font-family: 'Ubuntu', sans-serif;
     margin-top: 10%;
   }
+
   .brief {
     color: white;
     text-decoration: underline;
     text-decoration-thickness: 6px;
     text-decoration-color: #f21170;
   }
+
   .brief1 {
     font-size: 25px;
     width: 80%;
@@ -500,6 +512,7 @@ h5::before {
     margin-left: 0;
     align-items: center;
   }
+
   .card-bg {
     background-color: #232320;
     width: 80%;
@@ -615,12 +628,6 @@ h5::before {
   }
 }
 
-@media only screen and (min-width:301px) and (max-width:1100px) {
-  audio {
-    width: 100%;
-  }
-}
-
 .text-cls, .texts-cls {
   width: 80%;
   margin-left: 6%;
@@ -718,7 +725,7 @@ audio {
     border: solid 2px;
     border-color: #364547;
     border-radius: 22px;
-    margin-left:;
+    margin-left: ;
   }
 
   .prev, .next {
@@ -758,22 +765,27 @@ audio {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 2.5em;
+    font-size: 2.0em;
     letter-spacing: -1.5px;
     line-height: 110%;
-    margin-left: 15%;
     margin-top: 20%;
     transition: all .2s ease-in-out;
-    width: 100%;
+    width: 90%;
+    text-align: center;
+    margin-left: 20px;
   }
 
   .ltext {
     margin-top: 10%;
     margin-bottom: 25%;
-    margin-left: 10%;
+    margin-left: 5%;
     width: 90%;
     color: white;
     font-size: 15px;
     font-family: 'Ubuntu', sans-serif;
+  }
+
+  audio {
+    width: 100%;
   }
 }
