--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -361,7 +361,7 @@ h5::before {
   width: 100%;
   color: white;
   font-size: 33px;
-  font-family: Bogart, Recoleta, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: Recoleta, Helvetica, Helvetica, Arial, sans-serif;
   margin-bottom: 40px;
   margin-top: 50px;
   margin-left: 30px;
